samples/_failures_safe/1761492056_cfe8bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7107bf37.c: In function ‘main’:
./samples/SAFE/__tmp_7107bf37.c:161:5: error: expected expression at end of input
  161 |     if (
      |     ^~
./samples/SAFE/__tmp_7107bf37.c:161:5: error: expected declaration or statement at end of input
